force-app/main/default/objects/Case_Group_Member__c/Case_Group_Member__c.object-meta.xml
<CustomObject>
    <label>Case Group Member</label>
    <nameField>
        <displayFormat>CGM-{0000000000}</displayFormat>
        <label>Case Group Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>