force-app/main/default/objects/Case_Group_Member__c/fields/A_C_Zone__c.field-meta.xml
<CustomField>
    <fullName>A_C_Zone__c</fullName>
    <label>A/C Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>