force-app/main/default/objects/Case_Group_Member__c/fields/Accepted_Class__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Class__c</fullName>
    <description>Displays the accepted class of the case group member</description>
    <formula>Passengerid__r.Class__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted Class</label>
    <type>Text</type>
</CustomField>