force-app/main/default/objects/Case_Group_Member__c/fields/Accepted_Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Seat_Number__c</fullName>
    <description>Displays the accepted seat of the case group member</description>
    <formula>Passengerid__r.Checkin_Seat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted Seat Number</label>
    <type>Text</type>
</CustomField>