force-app/main/default/objects/Case_Group_Member__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the account related to the case group member</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Group Members</relationshipLabel>
    <relationshipName>Case_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>