force-app/main/default/objects/Case_Group_Member__c/fields/Action_Status__c.field-meta.xml
<CustomField>
    <fullName>Action_Status__c</fullName>
    <formula>TEXT(Caseid__r.Action__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Status</label>
    <type>Text</type>
</CustomField>