force-app/main/default/objects/Case_Group_Member__c/fields/Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Aircraft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the aircraft the position is related to</description>
    <label>A/C REG</label>
    <referenceTo>Aircraft__c</referenceTo>
    <relationshipLabel>Case Group Members</relationshipLabel>
    <relationshipName>Case_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>