force-app/main/default/objects/Case_Group_Member__c/fields/ATA_Chapter__c.field-meta.xml
<CustomField>
    <fullName>ATA_Chapter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATA Chapter</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Master_Map__c.Depend_On_Object__c</field>
            <operation>equals</operation>
            <valueField>$Source.Equipment__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Map__c</referenceTo>
    <relationshipLabel>Case Group Members (ATA Chapter)</relationshipLabel>
    <relationshipName>Case_Group_Members2</relationshipName>
    <type>Lookup</type>
</CustomField>