force-app/main/default/objects/Case_Group_Member__c/fields/ATA_Chapter_F__c.field-meta.xml
<CustomField>
    <fullName>ATA_Chapter_F__c</fullName>
    <description>Display the 2 digits in front of ATA chapter</description>
    <formula>LEFT(  ATA_Chapter__c  , 2)</formula>
    <label>ATA Chapter</label>
    <type>Text</type>
</CustomField>