force-app/main/default/objects/Case_Group_Member__c/fields/Authorize_Number__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Number__c</fullName>
    <description>Displays the authorization number of the personnel who logged the case</description>
    <formula>Caseid__r.Authorize_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AUTH NO.</label>
    <type>Text</type>
</CustomField>