force-app/main/default/objects/Case_Group_Member__c/fields/Block_Name__c.field-meta.xml
<CustomField>
    <fullName>Block_Name__c</fullName>
    <description>Displays the block name of the personnel who logged the case</description>
    <formula>Caseid__r.Block_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block Name</label>
    <type>Text</type>
</CustomField>