force-app/main/default/objects/Case_Group_Member__c/fields/Case_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_Date__c</fullName>
    <formula>Caseid__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Opened</label>
    <type>DateTime</type>
</CustomField>