force-app/main/default/objects/Case_Group_Member__c/fields/Case_Number_F__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_F__c</fullName>
    <formula>IF( $User.UIThemeDisplayed == 'Theme4t', HYPERLINK("/" &amp; Caseid__r.Id, CreatedBy.Station__c &amp; CreatedBy.Department &amp;    Caseid__r.CaseNumber ), HYPERLINK("javascript:srcUp('/" &amp;  Caseid__r.Id  &amp; "')", CreatedBy.Station__c &amp; CreatedBy.Department &amp;    Caseid__r.CaseNumber   ))</formula>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>