force-app/main/default/objects/Case_Group_Member__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <formula>TEXT( Caseid__r.Origin )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel</label>
    <type>Text</type>
</CustomField>