force-app/main/default/objects/Case_Group_Member__c/fields/Case_Priority__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority__c</fullName>
    <formula>TEXT(  Caseid__r.Priority )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>