force-app/main/default/objects/Case_Group_Member__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <formula>TEXT(  Caseid__r.Case_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Type</label>
    <type>Text</type>
</CustomField>