force-app/main/default/objects/Case_Group_Member__c/fields/Caseid__c.field-meta.xml
<CustomField>
    <fullName>Caseid__c</fullName>
    <description>Displays the case that the case group member is related to</description>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Group Members</relationshipLabel>
    <relationshipName>Case_Group_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>