force-app/main/default/objects/Case_Group_Member__c/fields/Change_Cabin_Class__c.field-meta.xml
<CustomField>
    <fullName>Change_Cabin_Class__c</fullName>
    <description>Displays the changed cabin class of case group member</description>
    <label>Change Cabin Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>