force-app/main/default/objects/Case_Group_Member__c/fields/Change_Cabin_Class_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Change_Cabin_Class_Full_Name__c</fullName>
    <description>Displays the full name of changed cabin class of case group member</description>
    <formula>CASE( Change_Cabin_Class__c , "F", "First", "C", "Business", "Y", "Economy", "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Cabin Class Full Name</label>
    <type>Text</type>
</CustomField>