force-app/main/default/objects/Case_Group_Member__c/fields/Change_Seat__c.field-meta.xml
<CustomField>
    <fullName>Change_Seat__c</fullName>
    <description>Displays the new seat for the case group member</description>
    <label>Change Seat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>