force-app/main/default/objects/Case_Group_Member__c/fields/Complain_TXT__c.field-meta.xml
<CustomField>
    <fullName>Complain_TXT__c</fullName>
    <description>Displays the part, equipment and defect condition for the case that the case group member is related to</description>
    <formula>Caseid__r.Complaint_TXT_40__c</formula>
    <label>Complain TXT</label>
    <type>Text</type>
</CustomField>