force-app/main/default/objects/Case_Group_Member__c/fields/Created_At_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Created_At_Mobile__c</fullName>
    <label>Created At (Mobile)</label>
    <type>DateTime</type>
</CustomField>