force-app/main/default/objects/Case_Group_Member__c/fields/CrewId__c.field-meta.xml
<CustomField>
    <fullName>CrewId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>Case Group Members</relationshipLabel>
    <relationshipName>Case_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>