force-app/main/default/objects/Case_Group_Member__c/fields/Defect_Type__c.field-meta.xml
<CustomField>
    <fullName>Defect_Type__c</fullName>
    <description>Displays the defect type from the case that the case group member is related to</description>
    <label>Defect Type</label>
    <type>TextArea</type>
</CustomField>