force-app/main/default/objects/Case_Group_Member__c/fields/Document_Version__c.field-meta.xml
<CustomField>
    <fullName>Document_Version__c</fullName>
    <label>Document_Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>