force-app/main/default/objects/Case_Group_Member__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the value of the equipment the case group member is related to</description>
    <label>Equipment</label>
    <referenceTo>Master_Map__c</referenceTo>
    <relationshipLabel>Case Group Members</relationshipLabel>
    <relationshipName>Case_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>