force-app/main/default/objects/Case_Group_Member__c/fields/Equipment_From_Case__c.field-meta.xml
<CustomField>
    <fullName>Equipment_From_Case__c</fullName>
    <description>Displays the equipment from the case that the case group member is related to</description>
    <formula>Caseid__r.EquipmentId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment</label>
    <type>Text</type>
</CustomField>