force-app/main/default/objects/Case_Group_Member__c/fields/FFP_Number__c.field-meta.xml
<CustomField>
    <fullName>FFP_Number__c</fullName>
    <label>FFP Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>