force-app/main/default/objects/Case_Group_Member__c/fields/FFP_Number_F__c.field-meta.xml
<CustomField>
    <fullName>FFP_Number_F__c</fullName>
    <formula>Passengerid__r.FFP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FFP Number</label>
    <type>Text</type>
</CustomField>