force-app/main/default/objects/Case_Group_Member__c/fields/FFP_Tier__c.field-meta.xml
<CustomField>
    <fullName>FFP_Tier__c</fullName>
    <label>FFP Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>