force-app/main/default/objects/Case_Group_Member__c/fields/FFP_Tier_F__c.field-meta.xml
<CustomField>
    <fullName>FFP_Tier_F__c</fullName>
    <formula>Passengerid__r.FFP_Tier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FFP Tier</label>
    <type>Text</type>
</CustomField>