force-app/main/default/objects/Case_Group_Member__c/fields/Flight_Number_F__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number_F__c</fullName>
    <formula>HYPERLINK("javascript:srcUp('/" &amp;   Caseid__r.Flightid__c   &amp; "')",   Caseid__r.Flightid__r.Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Number</label>
    <type>Text</type>
</CustomField>