force-app/main/default/objects/Case_Group_Member__c/fields/FlightId__c.field-meta.xml
<CustomField>
    <fullName>FlightId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight Number</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Case Group Members</relationshipLabel>
    <relationshipName>Case_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>