force-app/main/default/objects/Case_Group_Member__c/fields/Impact_F__c.field-meta.xml
<CustomField>
    <fullName>Impact_F__c</fullName>
    <formula>TEXT( Impact__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impact</label>
    <type>Text</type>
</CustomField>