force-app/main/default/objects/Case_Group_Member__c/fields/Impact_Status_Color__c.field-meta.xml
<CustomField>
    <fullName>Impact_Status_Color__c</fullName>
    <formula>IF(  ISPICKVAL( Caseid__r.Action__c, "" ) &amp;&amp;   ISPICKVAL(  Impact__c, "" )  , IMAGE("/resource/YellowCase","",20,20) + ' ',
        
      IF(  ISPICKVAL( Caseid__r.Action__c , "Remain") &amp;&amp; ISPICKVAL (  Impact__c , "Block")  , IMAGE("/resource/RedCase","",20,20) + ' ', 

                   IF( ISPICKVAL( Caseid__r.Action__c , "Remain") &amp;&amp; ISPICKVAL (  Impact__c , "Malfunction") , IMAGE("/resource/OrangeCase","",20,20) + ' ',

                                IF( ISPICKVAL( Caseid__r.Action__c , "Remain") &amp;&amp; ISPICKVAL (  Impact__c , "Serviceable"), IMAGE("/resource/BlueCase","",20,20) + ' ',

                                      IF ( ISPICKVAL (  Impact__c , "Complete") , IMAGE("/resource/GreenCase","",20,20) + ' ',"")
)
)
)
)</formula>
    <label>Impact Status</label>
    <type>Text</type>
</CustomField>