force-app/main/default/objects/Case_Group_Member__c/fields/Master_Case_Recode_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Case_Recode_Type_Id__c</fullName>
    <formula>Caseid__r.RecordTypeId</formula>
    <label>Master Case Recode Type Id (Clarify)</label>
    <type>Text</type>
</CustomField>