force-app/main/default/objects/Case_Group_Member__c/fields/New_Travel_Class__c.field-meta.xml
<CustomField>
    <fullName>New_Travel_Class__c</fullName>
    <description>New travel class of a passenger when an incident occurs during a flight</description>
    <label>New Travel Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>