force-app/main/default/objects/Case_Group_Member__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the part the case group member is related to</description>
    <label>Part</label>
    <referenceTo>Master_Map__c</referenceTo>
    <relationshipLabel>Case Group Members (Part)</relationshipLabel>
    <relationshipName>Case_Group_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>