force-app/main/default/objects/Case_Group_Member__c/fields/Part_From_Case__c.field-meta.xml
<CustomField>
    <fullName>Part_From_Case__c</fullName>
    <formula>Caseid__r.PartId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part</label>
    <type>Text</type>
</CustomField>