force-app/main/default/objects/Case_Group_Member__c/fields/Passenger_Name_Search__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name_Search__c</fullName>
    <description>Displays the passenger name as a text to enable global search indexing</description>
    <label>Passenger Name Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>