force-app/main/default/objects/Case_Group_Member__c/fields/Passenger_Seat_Search__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Seat_Search__c</fullName>
    <description>Displays the passenger seat as a text to enable global search indexing</description>
    <label>Passenger Seat Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>