force-app/main/default/objects/Case_Group_Member__c/fields/Passengerid__c.field-meta.xml
<CustomField>
    <fullName>Passengerid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the passenger the case group member is related to</description>
    <label>Passenger</label>
    <referenceTo>Passenger__c</referenceTo>
    <relationshipLabel>Case Group Members</relationshipLabel>
    <relationshipName>Case_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>