force-app/main/default/objects/Case_Group_Member__c/fields/Position_Alphabet_Only__c.field-meta.xml
<CustomField>
    <fullName>Position_Alphabet_Only__c</fullName>
    <formula>RIGHT(Position__c, 1)</formula>
    <label>Position Alphabet Only</label>
    <type>Text</type>
</CustomField>