force-app/main/default/objects/Case_Group_Member__c/fields/Position_Number_Only__c.field-meta.xml
<CustomField>
    <fullName>Position_Number_Only__c</fullName>
    <formula>VALUE(LEFT( Position__c, LEN(Position__c) - 1 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Number Only</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>