force-app/main/default/objects/Case_Group_Member__c/fields/Position_with_condition_F__c.field-meta.xml
<CustomField>
    <fullName>Position_with_condition_F__c</fullName>
    <formula>Seat_Number__c + '-' + Caseid__r.PartId__r.Name  + '-' +  Defect_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seat Position</label>
    <type>Text</type>
</CustomField>