force-app/main/default/objects/Case_Group_Member__c/fields/Requires_Fix__c.field-meta.xml
<CustomField>
    <fullName>Requires_Fix__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox = true means that the equipment requires fixing. Checkbox = false means that the equipment does not have a defect but is affected by another equipment.</description>
    <label>Requires Fix</label>
    <type>Checkbox</type>
</CustomField>