force-app/main/default/objects/Case_Group_Member__c/fields/ROP_Tier__c.field-meta.xml
<CustomField>
    <fullName>ROP_Tier__c</fullName>
    <formula>Passengerid__r.AccountId__r.ROP_Tier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROP Tier</label>
    <type>Text</type>
</CustomField>