force-app/main/default/objects/Case_Group_Member__c/fields/Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Seat_Number__c</fullName>
    <formula>Position__c</formula>
    <label>Seat Number</label>
    <type>Text</type>
</CustomField>