force-app/main/default/objects/Case_Group_Member__c/fields/SEQ_No_F__c.field-meta.xml
<CustomField>
    <fullName>SEQ_No_F__c</fullName>
    <formula>HYPERLINK("javascript:srcUp('/" &amp; Caseid__c &amp; "')",  Caseid__r.SEQ_No_Display__c  , "_self" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SEQ No.</label>
    <type>Text</type>
</CustomField>