force-app/main/default/objects/Case_Group_Member__c/fields/Staff_Name__c.field-meta.xml
<CustomField>
    <fullName>Staff_Name__c</fullName>
    <description>Displays the sequence number from the case the case group member is related to</description>
    <label>Staff Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>