force-app/main/default/objects/Case_Group_Member__c/fields/Staff_Personal_Number__c.field-meta.xml
<CustomField>
    <fullName>Staff_Personal_Number__c</fullName>
    <label>Staff Personal Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>