force-app/main/default/objects/Case_Group_Member__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <formula>Caseid__r.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject</label>
    <type>Text</type>
</CustomField>