force-app/main/default/objects/Case_Group_Member__c/fields/Travel_Class__c.field-meta.xml
<CustomField>
    <fullName>Travel_Class__c</fullName>
    <label>Travel Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>