force-app/main/default/objects/Case_Group_Member__c/recordTypes/Ground_Service_CGM.recordType-meta.xml
<RecordType>
    <fullName>Ground_Service_CGM</fullName>
    <active>true</active>
    <label>Ground Service CGM</label>
</RecordType>