force-app/main/default/objects/Case_Group_Member__c/recordTypes/Maintenance_Page_Layout.recordType-meta.xml
<RecordType>
    <fullName>Maintenance_Page_Layout</fullName>
    <active>true</active>
    <label>Maintenance Page Layout</label>
</RecordType>